--- a/styles.css
+++ b/styles.css
@@ -1,207 +1,123 @@
-/* Start_Variables */
-
-:root {
-    --main-color: #0091ae;
-    --nav-bg-color: #f1f1f1;
-    --light-color: #ffffff;
-    --attribute-color: #e83e8c;
-    --code-bg-color: #f7f7f7;
-    --incorrect-bg-color: #fdeeee;
-    --note-bg-color: #ffffcc;
-    --comment-color: #777777;
-    --font-color: #303030;
-    --main-border-radius: 5px;
-}
-
-/* End_Variables */
-/* Start_General_Styles */
-
 * {
-    box-sizing: border-box;
-}
-html {
-    scroll-behavior: smooth;
-}
-body {
-    color: var(--font-color);
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    min-height: 100vh;
-    font-size: 1rem;
-    line-height: 1.6;
-    font-family: 'Open Sans', Helvetica, sans-serif;
-}
-header {
-    color: var(--main-color);
-}
-header + p {
-    text-indent: 20px;
+  margin: 0;
 }
 
-/* End_General_Styles */
-/* Start_Navbar */
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
+  background-color: #f1f1f1;
+}
+
+#main-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  min-width: 280px;
+  max-width: 300px;
+}
 
 #navbar {
-    background-color: var(--nav-bg-color);
-    width: 350px;
-    height: 100%;
-    border-right: 3px solid var(--main-color);
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-#navbar header {
-    padding: 40px;
-    font-weight: 700;
-    font-size: 2rem;
-    text-align: center;
-}
-#navbar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-#navbar ul li {
-    width: 100%;
-    border-top: 1px solid var(--main-color);
-}
-#navbar .nav-link {
-    color: var(--main-color);
-    padding: 12px 30px;
-    font-weight: 500;
-    text-align: left;
-    text-decoration: none;
-    display: block;
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
-    cursor: pointer;
-}
-#navbar .nav-link:hover {
-    background-color: var(--main-color);
-    color: var(--light-color);
+  height: 100%;
+  border-right: solid 3px grey;
 }
 
-/* End_Navbar */
-/* Start_Main_doc */
+#navbar>h1 {
+  font-size: 1.6rem;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+#navbar ul {
+  padding: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 90%;
+  list-style: none;
+}
+
+#navbar ul li {
+  border: solid 1px #333;
+}
+
+#main-header #navbar ul li a {
+  display: block;
+  text-align: left;
+  padding: .8rem 1rem .8rem 2rem;
+  cursor: pointer;
+  color: #222;
+  text-decoration: none;
+}
 
 #main-doc {
-    background-color: var(--light-color);
-    padding: 40px;
-    margin-left: 350px;
+  position: absolute;
+  margin-left: 320px;
+  padding: 2rem 1rem;
 }
 
-/* Start_Main_section */
-
-#main-doc .main-section {
-    margin: 40px 0;
-}
 #main-doc .main-section header {
-    font-size: 1.625rem;
-    text-align: left;
-}
-#main-doc .main-section h3 {
-    margin-top: 22px;
-    font-weight: normal;
-    font-size: 1.375rem;
-}
-#main-doc .main-section ul {
-    list-style-type: square;
-}
-#main-doc .main-section li {
-    margin-top: 16px;
-}
-#main-doc .main-section code {
-    background-color: var(--code-bg-color);
-    padding: 20px;
-    margin: 20px 0;
-    font-size: 0.9375rem;
-    text-align: left;
-    font-family: monospace;
-    white-space: pre;
-    overflow-x: auto;
-    display: block;
-    border-radius: var(--main-border-radius);
-    -webkit-border-radius: var(--main-border-radius);
-    -moz-border-radius: var(--main-border-radius);
-    -ms-border-radius: var(--main-border-radius);
-    -o-border-radius: var(--main-border-radius);
-}
-#main-doc .main-section #incorrect-code {
-    background-color: var(--incorrect-bg-color);
-}
-#main-doc .main-section code .comment {
-    color: var(--comment-color);
-}
-#main-doc .main-section .tag-name {
-    color: var(--main-color);
-}
-#main-doc .main-section .attr-name {
-    color: var(--attribute-color);
-}
-#main-doc .main-section .note {
-    background-color: var(--note-bg-color);
-    padding: 20px;
-    margin-top: 24px;
-    border-radius: var(--main-border-radius);
-    -webkit-border-radius: var(--main-border-radius);
-    -moz-border-radius: var(--main-border-radius);
-    -ms-border-radius: var(--main-border-radius);
-    -o-border-radius: var(--main-border-radius);
-}
-#main-doc .main-section .note .character {
-    background-color: var(--code-bg-color);
-    padding: 2px;
-}
-#main-doc a {
-    color: var(--main-color);
-}
-#main-doc a:hover {
-    opacity: 0.6;
+  font-size: 2rem;
+  padding: 1rem 0;
 }
 
-/* End_main_section */
-/* End_Main */
-/* Start_Media_Query */
+#main-doc .main-section .main-article {
+  padding-left: 1.5rem;
+  margin-bottom: .5rem;
+  color: #222;
+}
 
-@media (max-width: 850px) {
-    #navbar {
-        width: 100%;
-        max-height: 285px;
-        border-right: none;
-        border-bottom: 1px solid var(--main-color);
-        position: absolute;
-        overflow-y: auto;
-        top: 0;
-        z-index: 1;
-    }
-    #navbar header {
-        padding: 20px;
-        font-size: 1.625rem;
-    }
-    #navbar ul {
-        border: 1px solid var(--main-color);
-    }
-    #main-doc {
-        margin-left: 0;
-        margin-top: 285px;
-        padding: 20px;
-    }
-    #main-doc .main-section header {
-        font-size: 1.5rem;
-    }
-    #main-doc .main-section h3 {
-        font-size: 20px;
-    }
+#main-doc .main-section .main-article p {
+  margin-bottom: 1rem;
 }
-@media (max-width: 767px) {
-    #main-doc {
-        padding: 16px;
-    }
+
+#main-doc .main-section .main-article ul {
+  margin: 1.3rem 0 0 1.2rem;
 }
-/* End_Media_Query */
+
+#main-doc .main-section .main-article ul li {
+  margin-bottom: 1rem;
+}
+
+#main-doc .main-section .main-article code {
+  display: block;
+  padding: 1.5rem;
+  text-align: left;
+  background-color: #ddd;
+  border-radius: 7px;
+  margin-bottom: 1rem;
+}
+
+#main-doc .main-section:last-child .main-article ul {
+  margin: .5rem 0 1.5rem 3rem;
+  padding: 0;
+}
+
+#creator {
+  text-align: left;
+  padding: 2rem 0 0;
+}
+
+/* mobile-devices */
+@media (max-width: 600px) {
+  #main-header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    max-width: 95%;
+    max-height: 400px;
+  }
+
+  #navbar {
+    width: 100%;
+    margin: 0;
+  }
+
+  #main-doc {
+    position: relative;
+    margin-left: 0px;
+    padding: 2rem 1rem;
+    margin-top: 410px;
+  }
+
+}
